# snark-js-stylus

./: .gitignore  cli.js  package-lock.json  package.json
smart_contract_tests/: package-lock.json
src/: groth16.js  groth16_export_stylusverifier.js
templates/: verifier_groth16.rs.ejs
templates/groth16_verifier_template/: Cargo.toml
templates/groth16_verifier_template/.cargo/: config.toml
